@@ -284,24 +284,6 @@ name|hadoop
 operator|.
 name|security
 operator|.
-name|authentication
-operator|.
-name|client
-operator|.
-name|AuthenticatedURL
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|security
-operator|.
 name|authorize
 operator|.
 name|AuthorizationException
@@ -337,26 +319,6 @@ operator|.
 name|token
 operator|.
 name|Token
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|security
-operator|.
-name|token
-operator|.
-name|delegation
-operator|.
-name|web
-operator|.
-name|DelegationTokenAuthenticatedURL
 import|;
 end_import
 
@@ -501,30 +463,6 @@ operator|.
 name|io
 operator|.
 name|Writer
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|lang
-operator|.
-name|reflect
-operator|.
-name|Field
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|lang
-operator|.
-name|reflect
-operator|.
-name|Method
 import|;
 end_import
 
@@ -5540,6 +5478,191 @@ argument_list|(
 name|ekv
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|ex
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|fail
+argument_list|(
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|KMSConfiguration
+operator|.
+name|DEFAULT_KEY_ACL_PREFIX
+operator|+
+literal|"MANAGEMENT"
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|KMSConfiguration
+operator|.
+name|DEFAULT_KEY_ACL_PREFIX
+operator|+
+literal|"GENERATE_EEK"
+argument_list|,
+literal|"*"
+argument_list|)
+expr_stmt|;
+name|writeConf
+argument_list|(
+name|testDir
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+name|runServer
+argument_list|(
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+name|testDir
+argument_list|,
+operator|new
+name|KMSCallable
+argument_list|<
+name|Void
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|call
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+name|KeyProvider
+operator|.
+name|DEFAULT_BITLENGTH_NAME
+argument_list|,
+literal|128
+argument_list|)
+expr_stmt|;
+specifier|final
+name|URI
+name|uri
+init|=
+name|createKMSUri
+argument_list|(
+name|getKMSUrl
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|doAs
+argument_list|(
+literal|"GENERATE_EEK"
+argument_list|,
+operator|new
+name|PrivilegedExceptionAction
+argument_list|<
+name|Void
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Void
+name|run
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|KeyProvider
+name|kp
+init|=
+operator|new
+name|KMSClientProvider
+argument_list|(
+name|uri
+argument_list|,
+name|conf
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|KeyProviderCryptoExtension
+name|kpce
+init|=
+name|KeyProviderCryptoExtension
+operator|.
+name|createKeyProviderCryptoExtension
+argument_list|(
+name|kp
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|kpce
+operator|.
+name|generateEncryptedKey
+argument_list|(
+literal|"k1"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|Assert
+operator|.
+name|fail
+argument_list|(
+literal|"User [GENERATE_EEK] should be allowed to generate_eek on k1"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
