@@ -462,6 +462,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11201. Hadoop Archives should support globs resolving to files.
     (Gera Shegalov via cnauroth)
 
+    HADOOP-11322. key based ACL check in KMS always check KeyOpType.MANAGEMENT
+    even actual KeyOpType is not MANAGEMENT. (Dian Fu via yliu)
+
 Release 2.6.0 - 2014-11-18
 
   INCOMPATIBLE CHANGES
